--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="da">
   <head>
     <meta charset="utf-8">
-    <title>test</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <?php
+      /* Used to pre-render SEO meta tags etc. */
+      wp_head();
+    ?>
   </head>
 
   <body>
